--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-        <img src="images/b4acaf7c836b88206962a8f62547bd0a.jpg" alt="A descriptive alt text" width="300">
+        <img src="images/b4acaf7c836b88206962a8f62547bd0a.jpg" alt="alt text" width="300">
         <p>I hate coding so much it is an absolute nightmare and I would rather do an entire annual report off a word document then try to code again.</p>
         
         <section>
