--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             padding: 10px;
             margin-top: 20px;
         }
+        img {
+    border-radius: 35px; /*roundness spectrum*/
+}
     </style>
 </head>
 <body>
