--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing a One-Page Website</title>
     <style>
-        /* Inline styles for now, will move to CSS later */
+        /* Inline styles, will move to CSS later */
         body {
             background-color: #f5f3f7; /* Off-white */
             color: #1a1a1a; /* Off-black */
-            font-family: "Akzidenz Grotesk", "Josefin Sans", "Tango Macabre", "Didot", "Arial", -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: "Josefin Sans", sans-serif; /* Body font */
             text-align: center;
             padding: 20px;
+        }
+        /* main header (h1) */
+        h1 {
+            font-family: "Barriecito", cursive; /* Font for the main header */
+        }
+
+        /* subheadings (h2) */
+        h2 {
+            font-family: "Archivo Narrow", sans-serif; /* Font for the subheadings */
         }
         header {
             background-color: #d1b3ff; /* Light purple */
