--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <html lang="en">
 <head>
+
+    <!-- This is importing the Google Fonts: Archivo Narrow, Josefin Sans, and Barriecito -->
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&family=Josefin+Sans:wght@400;600&family=Barriecito&display=swap" rel="stylesheet">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing a One-Page Website</title>
