--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         /* main header (h1) */
         h1 {
             font-family: "Barriecito", cursive; /* Font for the main header */
+            font-size: 4rem; /* sizing,sets the font size to x times the root font size */
         }
 
         /* subheadings (h2) */
@@ -54,7 +55,8 @@
 
     <main>
         <img src="images/b4acaf7c836b88206962a8f62547bd0a.jpg" alt="A descriptive alt text" width="300">
-        <p>I hate coding so much it is an absolute nightmare and I would rather do an entire annual report off a word document then try to code again.</p>
+        <p>I hate coding so much,
+            it is an absolute nightmare and I would rather do an entire annual report off a word document than try to code again.</p>
         
         <section>
             <h2>About</h2>
@@ -63,7 +65,7 @@
 
         <article>
             <h2>How it's going</h2>
-            <p>I wasn't able to find my old .html files so I'm extremely frusterated and hates life. </p>
+            <p>I wasn't able to find my old .html files so I'm extremely frustrated and hates life. </p>
         </article>
     </main>
 
