--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             text-align: center;
             padding: 20px;
         }
+        /* under image text */
+        .caption {
+        font-style: italic; 
+        width: 50%; 
+        margin: 0 auto; 
+        font-size: 1.1rem; /
+        line-height: 1.5; /
+}
+
         /* main header (h1) */
         h1 {
             font-family: "Barriecito", cursive; /* Font for the main header */
@@ -55,8 +64,7 @@
 
     <main>
         <img src="images/b4acaf7c836b88206962a8f62547bd0a.jpg" alt="A descriptive alt text" width="300">
-        <p>I hate coding so much,
-            it is an absolute nightmare and I would rather do an entire annual report off a word document than try to code again.</p>
+       <p class="caption">I hate coding so much, it is an absolute nightmare and I would rather do an entire annual report off a word document than try to code again.</p>
         
         <section>
             <h2>About</h2>
