--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing a One-Page Website</title>
+    <title>Testing for Class</title>
     <style>
-        /* Inline styles, will move to CSS later */
+        
         body {
             background-color: #f5f3f7; /* Off-white */
             color: #1a1a1a; /* Off-black */
@@ -29,8 +29,8 @@
 
         /* main header (h1) */
         h1 {
-            font-family: "Barriecito", cursive; /* Font for the main header */
-            font-size: 4rem; /* sizing,sets the font size to x times the root font size */
+            font-family: "Barriecito", cursive; /* Font for the main header, will be ugly font if it's not loading */
+            font-size: 4rem; /* sizing, sets the font size to x times the root font size */
         }
 
         /* subheadings (h2) */
